<resources>
    <string name="app_name">Skyloft</string>

    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="input_captcha">输入验证码</string>
    <string name="finish">完成</string>
    <string name="exit">退出</string>
    <string name="switch_account">切换账号</string>

    <string name="login_username">用户名</string>
    <string name="phone_login">手机登录</string>
    <string name="email_login">邮箱登录</string>
    <string name="send_captcha">发送验证码</string>
    <string name="login_hint_phone">输入手机号</string>
    <string name="login_hint_email">输入邮箱</string>
    <string name="login_hint_password">输入密码</string>
    <string name="login_register_hint_phone">输入手机号以注册</string>
    <string name="login_register_hint_password">自己想的密码就要好好记住哦</string>
    <string name="login_captcha_text_view">请在下方输入验证码</string>
    <string name="login_captcha_hint_captcha">请输入验证码</string>
    <string name="login_phone_number_invalid">电话号码不正确</string>
    <string name="login_email_invalid">请输入正确的电子邮箱</string>
    <string name="login_password_invalid">密码长度在6~16位</string>
    <string name="login_success">登录成功</string>
    <string name="login_phone_login_failed">登录失败！请检查您的手机号与密码</string>
    <string name="login_email_login_failed">登录失败！请检查您的邮箱与密码</string>

    <string name="main_nav_repository">资料库</string>
    <string name="main_nav_recommend">为你推荐</string>
    <string name="main_nav_glance">浏览</string>
    <string name="main_nav_radio">电台</string>
    <string name="main_nav_temp_user_name">点击登录</string>
    <string name="main_nav_temp_user_intro">登录以获得为您精选的内容推荐</string>
    <string name="main_nav_search">搜索</string>
    <string name="main_menu_profile">个人信息</string>
    <string name="main_recommend_fragment_recent_played">最近播放</string>
    <string name="main_recommend_fragment_popular">流行音乐</string>
    <string name="main_recommend_fragment_recommend_playlist">推荐歌单</string>
    <string name="main_recommend_fragment_latest_album">最新专辑</string>
    <string name="main_view_all">显示全部</string>

    <string name="play_music">播放音乐</string>
    <string name="play_list">随机播放</string>
    <string name="personal_fm">私人FM</string>
    <string name="pause">暂停播放</string>
    <string name="previous">上一首</string>
    <string name="next">下一首</string>
    <string name="shuffle">随机播放</string>
    <string name="single_cycle">单曲循环</string>
    <string name="list_cycle">列表循环</string>
    <string name="daily_recommend">每日推荐</string>
    <string name="music_list">歌单</string>
    <string name="radio">电台</string>
    <string name="rank_board">排行榜</string>

    <string name="artists">歌手</string>
    <string name="album">专辑</string>
    <string name="song_name">曲名</string>
    <string name="release_date">发布日期</string>
    <string name="numbers_of_songs">歌曲数量</string>

<<<<<<< HEAD
    <string name="toast_while_empty_username">请输入用户名！</string>
    <string name="toast_while_empty_phone_number">请输入电话号码！</string>
    <string name="toast_while_empty_password">请输入密码！</string>
    <string name="toast_while_both_username_password_empty">请输入用户名与密码！</string>
    <string name="toast_while_both_phone_number_password_empty">请输入电话号码与密码！</string>
    <string name="toast_while_phone_number_is_invalid">电话号码不正确！</string>

    <string name="sheet_name">加油冲冲冲！</string>
    <string name="sheet_owner_name">Apple Music</string>
    <string name="sheet_update_time">周五更新</string>
    <string name="sheet_add">添加</string>
    <string name="msg_sheet">阿门阿前一棵葡萄树，阿嫩阿嫩绿地刚发芽，蜗牛背着那重重的壳呀，一步一步地往上爬，
        阿树阿上两只黄鹂鸟，阿嘻阿嘻哈哈在笑它，葡萄成熟还早得很哪，现在上来干什么，阿黄阿黄鹂儿不要笑，等我爬上它就成熟了</string>

=======
>>>>>>> 3ef5b80a119511d52e1bca546004c7535332205a
    <!-- BeforeLoginActivity相关 -->
    <!-- actions -->
    <string name="login_activity_action">com.madderate.skyloft.LOGIN</string>
    <!-- extra strings -->
    <string name="replace_fragment">REPLACE_TO</string> <!-- fragment之间的切换 -->
    <string name="replace_activity">JUMP_TO</string> <!-- activity之间的切换 -->
    <string name="login_fragment_phone">PhoneLoginFragment</string>
    <string name="login_fragment_email">EmailLoginFragment</string>
    <string name="login_activity_register">RegisterActivity</string>


</resources>
