<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:background="#3C3C3C"
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:scaleType="centerCrop"
        android:visibility="visible"
        android:src="@mipmap/bk"
        />
    <ImageView
        android:id="@+id/image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="85dp"
        android:layout_marginStart="10dp"
        android:src="@mipmap/test"
        android:scaleType="centerCrop" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sheet_name"
        android:layout_marginTop="85dp"
        android:layout_marginStart="170dp"
        android:textSize="18sp">
    </TextView>
    <TextView
        android:id="@+id/owner_sheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="105dp"
        android:layout_marginStart="170dp"
        android:textSize="14sp"
        android:text="@string/sheet_owner_name" />
    <TextView
        android:id="@+id/uptime_sheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:layout_marginStart="170dp"
        android:textSize="14sp"
        android:text="@string/sheet_update_time" />

    <Button
        android:id="@+id/add_button"
        android:background="#F08080"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="188dp"
        android:layout_marginStart="170dp"
        android:textSize="20sp"
        android:text="@string/sheet_add"
        />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2px"
        android:layout_marginTop="240dp"
        android:background="#FFFFFF"/>

    <TextView
        android:id="@+id/msg_sheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="245dp"
        android:textSize="12sp"
        android:text="@string/msg_sheet"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2px"
        android:layout_marginTop="311dp"
        android:background="#FFFFFF"/>
</FrameLayout>
