<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="250dp"
    android:layout_marginStart="30dp"
    android:orientation="vertical"
    android:background="@mipmap/test">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/ic_launcher_background" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/title_sheet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:text="@string/sheet_name"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/owner_sheet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_gravity="start"
                android:textSize="14sp"
                android:text="@string/sheet_owner_name" />
            <TextView
                android:id="@+id/uptime_sheet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_gravity="start"
                android:textSize="14sp"
                android:text="@string/sheet_update_time" />

            <Button
                android:id="@+id/add_button"
                android:background="#F08080"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="55dp"
                android:layout_marginStart="10dp"
                android:textSize="20sp"
                android:text="@string/sheet_add" />

        </LinearLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/msg_sheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textSize="12sp"
        android:text="@string/msg_sheet" />

</LinearLayout>