<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="8dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".Activities.Login.Fragments.PhoneLoginFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_phone_login_phone_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/et_phone_login_password_layout"
        android:layout_margin="8dp"
        android:hint="@string/login_hint_phone"
        app:endIconMode="clear_text"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_phone_login_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLength="11" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_phone_login_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/phone_login_button"
        android:layout_margin="8dp"
        android:hint="@string/login_hint_password"
        app:endIconMode="password_toggle"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_phone_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/phone_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/other_options"
        android:layout_margin="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/login"
        android:textColor="@color/colorText"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/other_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp">

        <Button
            android:id="@+id/to_login_with_email"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/email_login"
            android:textSize="14sp" />

        <Button
            android:id="@+id/register"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/register"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

    </LinearLayout>

</RelativeLayout>