<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/recent_played"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/recent_played_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="12dp"
                android:text="@string/main_recommend_fragment_recent_played"
                android:textColor="@color/colorTextPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/recent_played_view_all"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="12dp"
                android:gravity="bottom|right"
                android:padding="0dp"
                android:text="@string/main_view_all"
                android:textSize="16sp" />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recent_played_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginHorizontal="16dp"
        android:background="@color/colorDivider"/>

    <LinearLayout
        android:id="@+id/popular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/popular_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="12dp"
            android:text="@string/main_recommend_fragment_popular"
            android:textColor="@color/colorTextPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/popular_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginHorizontal="16dp"
        android:background="@color/colorDivider"/>

    <LinearLayout
        android:id="@+id/singer_recommend_0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/singer_recommend_0_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="12dp"
            android:text="@string/main_recommend_fragment_popular"
            android:textColor="@color/colorTextPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/singer_recommend_0_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginHorizontal="16dp"
        android:background="@color/colorDivider"/>

    <LinearLayout
        android:id="@+id/language_recommend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/language_recommend_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="12dp"
            android:text="@string/main_recommend_fragment_popular"
            android:textColor="@color/colorTextPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/language_recommend_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginHorizontal="16dp"
        android:background="@color/colorDivider"/>

    <LinearLayout
        android:id="@+id/singer_recommend_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/singer_recommend_1_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="12dp"
            android:text="@string/main_recommend_fragment_popular"
            android:textColor="@color/colorTextPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/singer_recommend_1_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>